Update: website ka header change kiya aur naye images add kiye

--- a/frontend/src/All_CSS/Start.css
+++ b/frontend/src/All_CSS/Start.css
@@ -853,6 +853,10 @@
         display: none;
     }
 
+    .Signup_input::placeholder{
+        color: white;
+    }
+
 }
 
 /* ----------------------------------RESPONSEVIE--------------------------------------------------------- */
@@ -864,7 +868,9 @@
         margin: 0%;
         padding: 0%;
     }
-
+    .Signup_input::placeholder{
+        color: white;
+    }
     .holiDiv{
         display: flex;
         align-items: center;
